updating the base html file

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 <!-- templates/home.html -->
-{% extends 'base.html' %}
+{% extends 'base1.html' %}
+{% load static %}
 
 {% block title %}Welcome to UpSkill {% endblock %}
 
