--- a/templates/home.html
+++ b/templates/home.html
@@ -301,7 +301,7 @@ Main Banner START -->
                 <!-- Counter item -->
                 <div class="col-sm-6 col-xl-3">
                     <div class="d-flex justify-content-center align-items-center p-4 bg-info bg-opacity-10 rounded-3">
-                        <span class="display-6 lh-1 text-info mb-0"><i class="bi bi-patch-check-fill"></i></span>
+                        <span class="display-6 lh-1 text-info mb-0"><i class="fa fa-certificate"></i></span>
                         <div class="ms-4 h6 fw-normal">
                             <div class="d-flex">
                                 <h5 class="purecounter mb-0 fw-bold" data-purecounter-start="0" data-purecounter-end="3" data-purecounter-delay="300">0</h5>
@@ -875,7 +875,7 @@ Main Banner START -->
                             <div class="bg-body shadow p-4 rounded-3 d-inline-block position-relative">
                                 <!-- Icon -->
                                 <div class="icon-lg bg-warning rounded-circle position-absolute top-0 start-100 translate-middle">
-                                    <i class="bi bi-shield-fill-check text-dark"></i>
+                                    <i class="fa fa-check text-dark"></i>
                                 </div>
                                 <!-- Title -->
                                 <h6 class="mb-3">5+ Verified Mentors</h6>
